fix: make dark mode btn bg colors a darker green

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     @apply w-full rounded-md mt-6 px-4 py-2 text-white font-medium;
   }
   .button-bg-primary {
-    @apply bg-blue-500 hover:bg-blue-600 dark:bg-green-600 dark:hover:bg-green-700;
+    @apply bg-blue-500 hover:bg-blue-600 dark:bg-green-700 dark:hover:bg-green-800;
   }
   .button-bg-warning {
     @apply bg-red-500 hover:bg-red-600 dark:bg-red-600 dark:hover:bg-red-700;
